--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
-#remote_theme: andi-apeunit/dev-aepps
+remote_theme: andi-apeunit/dev-aepps
 
-markdown: kramdown
-
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
+#markdown: kramdown
