--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = aepp-sdk-python
 	url = https://github.com/aeternity/aepp-sdk-python
 	branch = master
+[submodule "aepp-sdk-docs"]
+	path = aepp-sdk-docs
+	url = https://github.com/aeternity/aepp-sdk-docs.git
+	branch = master
