--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = aepp-sdk-docs
 	url = https://github.com/aeternity/aepp-sdk-docs.git
 	branch = master
+[submodule "epoch"]
+	path = epoch
+	url = https://github.com/aeternity/epoch
+	branch = master
