Revert "remove epoch link from _data/nav.yaml, edit README.md"
This reverts commit 9152f4d53b842db414d373e85360fbccd4e4be3c.

--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -9,9 +9,9 @@
 
 - section: about æternity
   subpages:
-#    - page:
-#        label: Docker install
-#        link: /epoch/docs/docker.md
+    - page:
+        label: Docker install
+        link: /epoch/docs/docker.md
     - page:
         label: Oracles
         link: /aepp-sdk-docs/Oracles.md
