--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = aepp-sdk-python
 	url = https://github.com/aeternity/aepp-sdk-python
 	branch = master
+[submodule "epoch"]
+	path = epoch
+	url = https://github.com/aeternity/epoch
+	branch = master
