--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,18 @@
 [submodule "aepp-blockchain-explorer"]
 	path = aepp-blockchain-explorer
-	url = https://github.com/aeternity/aepp-blockchain-explorer
-	branch = master
+	url = https://andi-apeunit@github.com/aeternity/aepp-blockchain-explorer
 [submodule "aepp-components"]
 	path = aepp-components
-	url = https://github.com/aeternity/aepp-components
-	branch = master
+	url = https://andi-apeunit@github.com/aeternity/aepp-components
 [submodule "aepp-prototypes"]
 	path = aepp-prototypes
-	url = https://github.com/aeternity/aepp-prototypes
-	branch = master
-[submodule "aepp-sdk-js"]
-	path = aepp-sdk-js
-	url = https://github.com/aeternity/aepp-sdk-js
-	branch = master
-[submodule "aepp-sdk-python"]
-	path = aepp-sdk-python
-	url = https://github.com/aeternity/aepp-sdk-python
-	branch = master
+	url = https://andi-apeunit@github.com/aeternity/aepp-prototypes
 [submodule "aepp-sdk-docs"]
 	path = aepp-sdk-docs
-	url = https://github.com/aeternity/aepp-sdk-docs.git
-	branch = master
+	url = https://andi-apeunit@github.com/aeternity/aepp-sdk-docs
+[submodule "aepp-sdk-js"]
+	path = aepp-sdk-js
+	url = https://andi-apeunit@github.com/aeternity/aepp-sdk-js
+[submodule "aepp-sdk-python"]
+	path = aepp-sdk-python
+	url = https://andi-apeunit@github.com/aeternity/aepp-sdk-python
