--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -21,7 +21,7 @@
         label: AENS Naming System
         link: /aepp-sdk-docs/AENS-Python.html
     - page:
-        label: Sophia Tutorial
+        label: Sofia Tutorial
         link: /aepp-sdk-docs/Sophia.html
 
 - section: JavaScript SDK
