--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -40,6 +40,8 @@
 - section: Python SDK
   link: /aepp-sdk-python/README.html
   subpages:
+    - page: Command line tool
+      link: /aepp-sdk-python/command-line-tool.html
     - page:
         label: Examples
         link: /aepp-sdk-python/examples/index.html
