updated tutorials to use separate repo

--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -88,7 +88,7 @@
         link: /aepp-blockchain-explorer/README.html
 
 - section: Tutorials
-  link: /tutorials.html
+  link: /tutorials/README.html
 
 - section: Glossary
   link: /aepp-sdk-docs/Glossary.html
