testing new structure for nav

--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -1,3 +1,4 @@
+
 - section: Introduction
   link: /
 #- section: Introduction
@@ -23,38 +24,21 @@
     - page:
         label: Sophia Tutorial
         link: /aepp-sdk-docs/Sophia.html
-
-- section: JavaScript SDK
-  link: /aepp-sdk-js/docs/usage.html
+        
+- section: Developer Tools
   subpages:
-#    - page:
-#        link: /aepp-sdk-js/README.html
-#       label: Something
-#    - page:
-#        label: Something
-#        link: /aepp-sdk-js/JS.html
     - page:
-        label: Examples
-        link: /aepp-sdk-docs/JS-Examples.html
-
-- section: Python SDK
-  link: /aepp-sdk-python/README.html
-  subpages:
-    - page: 
-        label: Command line tool
-        link: /aepp-sdk-python/command-line-tool.html
-    - page:
-        label: Examples
-        link: /aepp-sdk-python/examples/index.html
-#    - page:
-#        label: Programming Guide
-#        link: https://something.something/something
-#    - page:
-#        label: Annotated Examples
-#        link: https://something.something/something
-#    - page:
-#        label: API Documentation
-#        link: https://something.something/something
+        label: æternity API & SDK's
+        subpages:
+          - page:
+              label: Go
+              link: aepp-sdk-go/README.html
+          - page:
+              label: JavaScript
+              link: aepp-sdk-js/blob/develop/README.html
+          - page:
+              label: Python
+              link: aepp-sdk-python/blob/develop/README.html
 
 - section: Online Tools (testnet)
   subpages:
@@ -86,3 +70,4 @@
 
 - section: Glossary
   link: /aepp-sdk-docs/Glossary.html
+
